fixed 640 and below for tile stack not showing in css

--- a/modules/tile-stack/tile-stack.module.less
+++ b/modules/tile-stack/tile-stack.module.less
@@ -7,6 +7,7 @@
     display:block;
   }
   &-item {
+    display:block;
     height: 180px;
     width:100%;
     background-size: cover;
